--- a/styles.css
+++ b/styles.css
@@ -261,6 +261,45 @@ nav a:focus {
     filter: invert(100%);
 }
 
-.blocked {
-    display: inline-block;
+.birds-visit {
+    background-image:url("/parrots/visit1.jpeg");
+    background-size: cover;
+    background-position:center;
+    background-repeat: no-repeat;
+    height: 50%;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer {
+    background-color:#232323;
+    color: #ffffff;
+    padding: 2em 0;
+}
+
+footer a {
+    color: #FFFFFF;
+}
+
+i {
+    color:white;
+}
+.icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff;
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    margin: 0em auto 1.5em;
+    border-radius: 50%;
+}
+
+.rgbcolor {
+    background-color:rgba(255,255,255,0.5);
+    padding: 2.5em;
+    width: 100%;
 }
